[gd_scene load_steps=6 format=3 uid="uid://belfwiqii3x62"]

[ext_resource type="Script" path="res://Resources/GameData/PreBattleSceneScript.gd" id="1_5g11f"]
[ext_resource type="PackedScene" uid="uid://0ve5q5brp1ci" path="res://Resources/BattlePhase/Scenes/MissionInfoPanel.tscn" id="2_mission"]
[ext_resource type="PackedScene" uid="uid://by2a06guscvle" path="res://Resources/BattlePhase/Scenes/EnemyInfoPanel.tscn" id="3_svkk2"]
[ext_resource type="PackedScene" uid="uid://cnfbctdh8npq1" path="res://Resources/BattlePhase/Scenes/BattlefieldPreview.tscn" id="4_oa7sx"]
[ext_resource type="PackedScene" uid="uid://cxxx" path="res://Resources/CrewAndCharacters/Scenes/CharacterBox.tscn" id="5_870kb"]

[node name="PreBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g11f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 40.0
offset_right = 1880.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 32
text = "Pre-Battle Setup"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 337.0
offset_top = 129.0
offset_right = -314.0
offset_bottom = -415.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MissionInfoPanel" parent="HBoxContainer" instance=ExtResource("2_mission")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.3

[node name="EnemyInfoPanel" parent="HBoxContainer" instance=ExtResource("3_svkk2")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.3

[node name="BattlefieldPreview" parent="HBoxContainer" instance=ExtResource("4_oa7sx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 664.0
offset_right = 1747.0
offset_bottom = 1010.0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterBox" parent="BottomPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_870kb")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="CharacterBox2" parent="BottomPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_870kb")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="CharacterBox3" parent="BottomPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="CharacterBox4" parent="BottomPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterBox" parent="BottomPanel/VBoxContainer/HBoxContainer2" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="CharacterBox2" parent="BottomPanel/VBoxContainer/HBoxContainer2" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="CharacterBox3" parent="BottomPanel/VBoxContainer/HBoxContainer2" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="CharacterBox4" parent="BottomPanel/VBoxContainer/HBoxContainer2" instance=ExtResource("5_870kb")]
layout_mode = 2

[node name="StartBattleButton" type="Button" parent="."]
layout_mode = 2
offset_right = 155.0
offset_bottom = 40.0
text = "Start Battle"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_right = 155.0
offset_bottom = 40.0
text = "Back to Dashboard"

[connection signal="pressed" from="StartBattleButton" to="." method="_on_start_battle_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
